--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Tasti Labs</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
+    <h1>Tasti Labs</h1>
+    <h2>Categories</h2>
+    <div>
+      <ul>
+        <li>
+          <!-- Make each category li able to link to its respective category page -->
+        </li>
+      </ul>
+    </div>
+
   </body>
 </html>
