--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -9,8 +9,8 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
-    <h1>Tasti Labs</h1>
-    <h2>Categories</h2>
+    <!-- <h1>Tasti Labs</h1>
+    <h2>Categories</h2> -->
     <div>
       <ul>
         <li>
