--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -9,15 +9,16 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
-    <h1>Tasti Labs</h1>
-    <h2>Categories</h2>
-    <div>
-      <ul>
-        <li>
+    <!-- <h1>Tasti Labs</h1>
+    <h2>Categories</h2> -->
+    <div id="meal-list"></div>
+    <!-- <div> -->
+      <!-- <ul> -->
+        <!-- <li> -->
           <!-- Make each category li able to link to its respective category page -->
-        </li>
-      </ul>
-    </div>
+        <!-- </li> -->
+      <!-- </ul> -->
+    <!-- </div> -->
 
   </body>
 </html>
