--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -12,13 +12,11 @@
     <!-- <h1>Tasti Labs</h1>
     <h2>Categories</h2> -->
     <div id="meal-list"></div>
-    <!-- <div> -->
-      <!-- <ul> -->
-        <!-- <li> -->
-          <!-- Make each category li able to link to its respective category page -->
-        <!-- </li> -->
-      <!-- </ul> -->
-    <!-- </div> -->
 
+   <!-- <div id="dish-list"> -->
+   <ul id="dish-list"></ul>
+   </div>
+      
+        
   </body>
 </html>
