--- a/tasti-labs/category.html
+++ b/tasti-labs/category.html
@@ -6,6 +6,8 @@
     <title>Category Dishes</title>
 </head>
 <body>
-    <div id="this-dish"></div> 
+    <main>
+        <div id="this-dish"></div> 
+    </main>
 </body>
 </html>
