--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -11,16 +11,16 @@
     <div id="app">
       <header>
         <nav>
-          <h1>Logo</h1>
+          <h1><em>Tasti Labs</em></h1>
           <ul id="nav-butt">
-            <li><button>Home</button></li>
-            <li><button>About</button></li>
+            <li><button>( Home )</button></li>
+            <li><button>( Recipes )</button></li>
+            <li><button>( About )</button></li>
           </ul>
         </nav>
       </header>
       <main>
         <div id="meal-list">
-            <h1>Tasti Labs</h2>
             <h2>Are you craving...</h2>
             <ul id="categories">
               <li><button><img src="./index-images/chicken.png" alt="Chicken" title="Chicken"/></button></li>
@@ -32,6 +32,9 @@
         </div>
         <div id="dishes">
           <ul id="dish-list"></ul>
+        </div>
+        <div id="recipe">
+
         </div>
       </main>
     </div>      
