Added border animation

--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -23,11 +23,11 @@
         <div id="meal-list">
             <h2>Are you craving...</h2>
             <ul id="categories">
-              <li><button><img src="./index-images/chicken.png" alt="Chicken" title="Chicken"/></button></li>
-              <li><button><img src="./index-images/seafood.png" alt="Seafood" title="Seafood"/></button></li>
-              <li><button><img src="./index-images/pasta.png" alt="Pasta" title="Pasta"/></button></li>
-              <li><button><img src="./index-images/vegan.png" alt="Vegan" title="Vegan"/></button></li>
-              <li><button><img src="./index-images/dessert.png" alt="Dessert" title="Dessert"/></button></li>
+              <li><button><img src="./index-images/chicken.png" alt="Chicken" title="Chicken" class="border-button"/></button></li>
+              <li><button><img src="./index-images/seafood.png" alt="Seafood" title="Seafood" class="border-button"/></button></li>
+              <li><button><img src="./index-images/pasta.png" alt="Pasta" title="Pasta" class="border-button"/></button></li>
+              <li><button><img src="./index-images/vegan.png" alt="Vegan" title="Vegan" class="border-button"/></button></li>
+              <li><button><img src="./index-images/dessert.png" alt="Dessert" title="Dessert" class="border-button"/></button></li>
             </ul>
         </div>
         <div id="dishes">
