button id solved

--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -17,7 +17,7 @@
    <!-- <div id="dish-list"> -->
    <ul id="dish-list"></ul>
    </div>
-  <div id="recipie-Details"></div>
+  <!-- <div id="recipie-Details"></div> -->
 
   </body>
 </html>
