--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -15,9 +15,11 @@
     <div id="meal-list"></div>
 
    <!-- <div id="dish-list"> -->
-   <ul id="dish-list"></ul>
+  <div>
+   <ul id="dish-list"></ul> 
    </div>
-  <!-- <div id="recipie-Details"></div> -->
+   <!-- ! ul for recipe rendering  -->
+  <div id="recipe-Details"></div>
 
   </body>
 </html>
