Reorganized index.html

--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -7,19 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tasti Labs</title>
   </head>
+  <header>
+    <img src="" alt="">
+    <nav>
+      <ul>
+        <li></li>
+        <li></li>
+      </ul>
+    </nav>
+  </header>
   <body>
-    <div id="app"></div>
-
-    <!-- <h1>Tasti Labs</h1>
-    <h2>Categories</h2> -->
-    <div id="meal-list"></div>
-
-   <!-- <div id="dish-list"> -->
-  <div>
-   <ul id="dish-list"></ul> 
-   </div>
-   <!-- ! ul for recipe rendering  -->
-  <div id="recipe-Details"></div>
-
+    <div id="app">
+      <section id="types-of-meals" aria-labelledby="types-of-meals">
+        <div id="meal-list"></div>
+      </section>
+      <section id="dishes" aria-labelledby="dishes">
+        <div>
+          <ul id="dish-list"></ul>
+        </div>
+      </section>
+      <section id="recipe" aria-labelledby="recipe">
+        <div id="recipe-details"></div>
+      </section>
+    </div>
   </body>
 </html>
