--- a/tasti-labs/index.html
+++ b/tasti-labs/index.html
@@ -32,13 +32,15 @@
         </div>
       </section>
       <section id="dishes" aria-labelledby="dishes">
-        <h2></h2>
-        <div>
+        <button id="back-to-home"></button>
+        <div id="dishes-displayed">
+          <h2 id="dish-type"></h2>
           <ul id="dish-list"></ul>
         </div>
       </section>
       <section id="recipe" aria-labelledby="recipe">
-        <h2></h2>
+        <button id="back-to-dish-type"></button>
+        <h2 id="recipe-name"></h2>
         <div id="recipe-details"></div>
       </section>
     </div>
